Fix div text align issue
Replace external stylesheet div align-content center with text-align
center. Align-content does not actually center text.

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -3,5 +3,5 @@ div {
     font-size: 32px;
     font-weight: bold;
     color: white;
-    align-content: center;
+    text-align: center;
 }
